--- a/catalog.html
+++ b/catalog.html
@@ -132,9 +132,10 @@
                 </div>
                 </div>
               </fieldset>
-
-              <button class="button" type="submit">Применить</button>
-              <button class="button button__reset" type="reset">Сбросить</button>
+              <div class="catalog-filter-button">
+                <button class="button" type="submit">Применить</button>
+                <button class="button button__reset" type="reset">Сбросить</button>
+              </div>
             </form>
           </section>
         </section>
