Добавит крупные сетки страниц

--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <dev class="container">
+    <div class="container container--page">
       <header class="page-header" data-test="header">
         <a class="page-header-logo" aria-current="page" href="index.html">
           <img class="page-header-logo-img" src="images/logo/logo-sedona.svg" width="140" height="70" alt="Логотип сайта города Седона">
@@ -130,7 +130,7 @@
                     </button>
                   </div>
                 </div>
-                </div>
+
               </fieldset>
               <div class="catalog-filter-button">
                 <button class="button" type="submit">Применить</button>
@@ -181,7 +181,7 @@
               </div>
               <div class="product-card-button">
                 <a class="product-card-btn btn" href="#">подробнее</a>
-                <a class="product-card-btn product-card-btn--blue btn" href="#">в избранное</a>
+                <a class="product-card-btn product-card-btn--accent btn" href="#">в избранное</a>
               </div>
               <div class="product-card-rating product-card-rating-four">
                 <h4 class="visually-hidden"> Отель 4 звезды</h4>
@@ -201,7 +201,7 @@
               </div>
               <div class="product-card-button">
                 <a class="product-card-btn btn" href="#">подробнее</a>
-                <a class="product-card-btn product-card-btn--blue product-card-btn--active btn" href="#">в избранном</a>
+                <a class="product-card-btn product-card-btn--accent product-card-btn--active btn" href="#">в избранном</a>
               </div>
               <div class="product-card-rating product-card-rating-four">
                 <h4 class="visually-hidden"> Отель 4 звезды</h4>
@@ -221,7 +221,7 @@
               </div>
               <div class="product-card-button">
                 <a class="product-card-btn btn" href="#">подробнее</a>
-                <a class="product-card-btn product-card-btn--blue btn" href="#">в избранное</a>
+                <a class="product-card-btn product-card-btn--accent btn" href="#">в избранное</a>
               </div>
               <div class="product-card-rating product-card-rating-three">
                 <h4 class="visually-hidden"> Отель 3 звезды</h4>
@@ -241,7 +241,7 @@
               </div>
               <div class="product-card-button">
                 <a class="product-card-btn btn" href="#">подробнее</a>
-                <a class="product-card-btn product-card-btn--blue btn" href="#">в избранное</a>
+                <a class="product-card-btn product-card-btn--accent btn" href="#">в избранное</a>
               </div>
               <div class="product-card-rating product-card-rating-two">
                 <h4 class="visually-hidden"> Отель 2 звезды</h4>
@@ -314,7 +314,7 @@
           </a>
         </section>
       </footer>
-    </dev>
+      </di>
   </body>
 
 </html>
