--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <dev class="container container--page">
+    <div class="container container--page">
       <header class="page-header" data-test="header">
         <a class="page-header-logo" aria-current="page" href="index.html">
           <img class="page-header-logo-img" src="images/logo/logo-sedona.svg" width="140" height="70" alt="Логотип сайта города Седона">
@@ -173,7 +173,7 @@
         </section>
       </footer>
 
-    </dev>
+    </div>
   </body>
 
 </html>
