--- a/catalog.html
+++ b/catalog.html
@@ -55,7 +55,7 @@
               <a class="breadcrumbs-link">Гостиницы</a>
             </li>
           </ol>
-          <section class="catalog-products" data-test="filter">
+          <div class="catalog-products" data-test="filter">
             <h2 class="visually-hidden">Список товаров с фильтрами</h2>
             <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
               <fieldset class="catalog-filter-group">
@@ -137,7 +137,7 @@
                 <button class="button button__reset" type="reset">Сбросить</button>
               </div>
             </form>
-          </section>
+          </div>
         </section>
         <section class="results">
           <h2 class="results-title">
