--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
       </header>
       <main class="main-index main-container" data-test="main">
         <h1 class="visually-hidden">Седона - город в Аризоне</h1>
-        <section class="hero">
+        <section class="hero" data-test="hero">
           <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
           <img class="hero-image" src="images/hero-text.svg" width="458" height="352" alt='Welcome to the gorgeaus. SEDONA "Because the Grand Canyon sucks"'>
         </section>
-        <section class="info" id="info" data-test="hero">
+        <section class="info" id="info">
           <h2 class="info-title">Седона — небольшой городок в Аризоне, заслуживающий большего!
           </h2>
           <p class="info-text">
