--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </ul>
           <ul class="navigation-user clear-ul">
             <li class="navigation-user-item">
-              <a class="navigation-user-link" href="#" data-test="search">
+              <a class="navigation-user-link" href="#">
                 <span class="visually-hidden">Поиск</span>
               </a>
             </li>
@@ -47,7 +47,7 @@
           <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
           <img class="hero-image" src="images/hero-text.svg" width="458" height="352" alt='Welcome to the gorgeaus. SEDONA "Because the Grand Canyon sucks"'>
         </section>
-        <section class="info" id="info">
+        <section class="info" id="info" data-test="advantages">
           <h2 class="info-title">Седона — небольшой городок в Аризоне, заслуживающий большего!
           </h2>
           <p class="info-text">
@@ -92,7 +92,7 @@
             </li>
           </ul>
         </section>
-        <section class="advantages" data-test="advantages">
+        <section class="advantages">
           <h2 class="advantages-title">
             Приезжайте в Седону отдохнуть в комфорте и уюте!
           </h2>
@@ -120,7 +120,7 @@
             </li>
           </ul>
         </section>
-        <section class="hotel-search">
+        <section class="hotel-search" data-test="search">
           <h2 class="hotel-search--title">Заинтересовались?</h2>
           <p class="hotel-search-text">
             Укажите предполагаемые даты поездки,и мы покажем вам лучшие
