--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <img class="page-header-logo-img" src="images/logo/logo-sedona.svg" width="140" height="70" alt="Логотип сайта города Седона">
         </a>
         <nav class="navigation">
-          <ul class="navigation-list clear-ul">
+          <ul class="navigation-list">
             <li class="navigation--item">
               <a class="navigation-link" href="#">Главная</a>
             </li>
@@ -25,7 +25,7 @@
               <a class="navigation-link" href="catalog.html">Гостиницы</a>
             </li>
           </ul>
-          <ul class="navigation-user clear-ul">
+          <ul class="navigation-user">
             <li class="navigation-user-item">
               <a class="navigation-user-link" href="#">
                 <span class="visually-hidden">Поиск</span>
