Добавит крупную сетку страницы

--- a/catalog.html
+++ b/catalog.html
@@ -45,7 +45,7 @@
       <main class="main-catalog  main-container" data-test="main">
         <section class="inner-header" data-test="hero">
           <h1 class="inner-header-title">Гостиницы Седоны</h1>
-          <ol class="breadcrumbs clear-ul">
+          <ol class="breadcrumbs">
             <li class="breadcrumbs-item">
               <a class="breadcrumbs-link" href="index.html">
                 <span class="visually-hidden">Главная</span>
@@ -60,7 +60,7 @@
             <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
               <fieldset class="catalog-filter-group">
                 <legend class="catalog-filter-title">Инфраструктура:</legend>
-                <ul class="catalog-filter-list clear-ul">
+                <ul class="catalog-filter-list">
                   <li class="catalog-filter-item">
                     <label class="control" for="pool">
                       <input class="control-input" type="checkbox" name="pool" id="pool" checked>
@@ -84,7 +84,7 @@
 
               <fieldset class="catalog-filter-group">
                 <legend class="catalog-filter-title">Тип жилья:</legend>
-                <ul class="catalog-filter-list clear-ul">
+                <ul class="catalog-filter-list">
                   <li class="catalog-filter-item">
                     <label class="control">
                       <input class="control-input" type="radio" name="product-group" value="hotel" checked>
@@ -150,7 +150,7 @@
             <option value="popular">Сначала популярное</option>
             <option value="expensive">Сначала дорогое</option>
           </select>
-          <ul class="switcher-button-list clear-ul">
+          <ul class="switcher-button-list">
             <li class="switcher-button-list-item">
               <a href="#" class=" button-light">
                 <span class="visually-hidden">Значки</span>
