--- a/catalog.html
+++ b/catalog.html
@@ -285,7 +285,7 @@
       <footer class="footer" data-test="footer">
         <section class="social">
           <h2 class="visually-hidden">Социальные сети</h2>
-          <ul class="social-list  clear-ul">
+          <ul class="social-list">
             <li class="social-item">
               <a class="social-item-link" href="https://vk.com/htmlacademy">
                 <span class="visually-hidden">Vkontakte</span>
