--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
 
   <body>
     <div class="container container--page">
-      <header class="page-header" data-test="header">
+      <header class="page-header page-header--margin" data-test="header">
         <a class="page-header-logo" aria-current="page" href="index.html">
           <img class="page-header-logo-img" src="images/logo/logo-sedona.svg" width="140" height="70" alt="Логотип сайта города Седона">
         </a>
@@ -251,22 +251,22 @@
           </ul>
           <ul class="pagination clear-ul">
             <li class="pagination--item">
-              <a class="pagination--link pagination--link--active">1</a>
+              <a class="pagination-link pagination-link--active">1</a>
             </li>
             <li class="pagination--item">
-              <a class="pagination--link" href="#">2</a>
+              <a class="pagination-link" href="#">2</a>
             </li>
             <li class="pagination--item">
-              <a class="pagination--link" href="#">3</a>
+              <a class="pagination-link" href="#">3</a>
             </li>
             <li class="pagination--item">
-              <a class="pagination--link" href="#">4</a>
+              <a class="pagination-link" href="#">4</a>
             </li>
             <li class="pagination--item">
-              <span class="pagination--link">...</span>
+              <span class="pagination-link pagination-link-other">...</span>
             </li>
             <li class="pagination--item">
-              <a class="pagination--link" href="#">10</a>
+              <a class="pagination-link" href="#">10</a>
             </li>
           </ul>
         </section>
