Добавит крупную разметку

--- a/catalog.html
+++ b/catalog.html
@@ -139,7 +139,7 @@
             </form>
           </div>
         </section>
-        <section class="results">
+        <section class="results" data-test="catalog">
           <h2 class="results-title">
             Найдено гостиниц:
             <span class="results-text">38</span>
@@ -167,7 +167,7 @@
               </a>
             </li>
           </ul>
-          <ul class="product-list clear-ul" data-test="catalog">
+          <ul class="product-list" data-test="catalog">
             <li class="product-card">
               <a class="product-card-link" href="#" tabindex="-1">
                 <img class="product-card-image" src="images/catalog/hotel-1.jpg" width="300" height="212" alt="Звездное небо в расщелине гор">
@@ -249,7 +249,7 @@
               </div>
             </li>
           </ul>
-          <ul class="pagination clear-ul">
+          <ul class="pagination">
             <li class="pagination--item">
               <a class="pagination-link pagination-link--active">1</a>
             </li>
