--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             Укажите предполагаемые даты поездки,и мы покажем вам лучшие
             предложения гостиниц в Седоне
           </p>
-          <a class="btn hotel-search-btn">ПОИСК ГОСТИНИЦЫ В седоне</a>
+          <a class="hotel-search-btn">ПОИСК ГОСТИНИЦЫ В седоне</a>
         </section>
         <section class="subscribe subscribe--img" data-test="subscribe">
           <h2 class="subscribe--title">Подпишитесь на рассылку</h2>
