Микросетки на флексах для всех страниц

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 Все достопримечательности находятся очень близко
               </p>
             </li>
-            <li class="info-item">
+            <li class="info-item info-item--lighter">
               <h3 class="info-item-title">Красивая дорога</h3>
               <p class="info-item-text">
                 Ехать в Седону из Лас-Вегаса совсем не скучно!
@@ -103,19 +103,19 @@
             <li class="advantages-item advantages-item--home">
               <h3 class="advantages-item-title">Жильё</h3>
               <p class="advantages-item-text">
-                Рекомендуем пожитьв настоящем мотеле, всё как в кино!
+                Рекомендуем пожить<br>в настоящем мотеле,<br>всё как в кино!
               </p>
             </li>
             <li class="advantages-item advantages-item--food">
               <h3 class="advantages-item-title">Еда</h3>
               <p class="advantages-item-text">
-                Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
+                Всегда заказывайте<br>топовый фирменный бургер,<br>вы не разочаруетесь!
               </p>
             </li>
             <li class="advantages-item advantages-item--gift">
               <h3 class="advantages-item-title">Сувениры</h3>
               <p class="advantages-item-text">
-                Не только китайского, но и настоящего местного производства!
+                Не только китайского,<br> но и настоящего местного производства!
               </p>
             </li>
           </ul>
@@ -123,7 +123,7 @@
         <section class="hotel-search" data-test="search">
           <h2 class="hotel-search--title">Заинтересовались?</h2>
           <p class="hotel-search-text">
-            Укажите предполагаемые даты поездки,и мы покажем вам лучшие
+            Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие
             предложения гостиниц в Седоне
           </p>
           <a class="hotel-search-btn">ПОИСК ГОСТИНИЦЫ В седоне</a>
