--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
 
   <body>
     <div class="container container--page">
-      <header class="page-header page-header--margin" data-test="header">
+      <header class="page-header" data-test="header">
         <a class="page-header-logo" aria-current="page" href="index.html">
           <img class="page-header-logo-img" src="images/logo/logo-sedona.svg" width="140" height="70" alt="Логотип сайта города Седона">
         </a>
@@ -42,7 +42,7 @@
           </a>
         </nav>
       </header>
-      <main class="main-catalog  main-container" data-test="main">
+      <main class="main-catalog main-container" data-test="main">
         <section class="inner-header" data-test="hero">
           <h1 class="inner-header-title">Гостиницы Седоны</h1>
           <ol class="breadcrumbs">
@@ -140,8 +140,7 @@
           </div>
         </section>
         <section class="results" data-test="catalog">
-          <h2 class="results-title">
-            Найдено гостиниц:
+          <h2 class="results-title"> Найдено гостиниц:
             <span class="results-text">38</span>
           </h2>
 
@@ -150,14 +149,15 @@
             <option value="popular">Сначала популярное</option>
             <option value="expensive">Сначала дорогое</option>
           </select>
+
           <ul class="switcher-button-list">
             <li class="switcher-button-list-item">
-              <a href="#" class=" button-light">
+              <a href="#" class="switcher-button-list-item-link switcher-button-list-item-link-activ">
                 <span class="visually-hidden">Значки</span>
               </a>
             </li>
             <li class="switcher-button-list-item">
-              <a class="switcher-button-list-item-link switcher-button-list-item-link-active" href="#">
+              <a class="switcher-button-list-item-link e" href="#">
                 <span class="visually-hidden">Слайдер</span>
               </a>
             </li>
@@ -167,6 +167,8 @@
               </a>
             </li>
           </ul>
+        </section>
+        <section class="catalog">
           <ul class="product-list" data-test="catalog">
             <li class="product-card">
               <a class="product-card-link" href="#" tabindex="-1">
@@ -184,7 +186,9 @@
                 <a class="product-card-btn product-card-btn--accent btn" href="#">в избранное</a>
               </div>
               <div class="product-card-rating product-card-rating-four">
-                <h4 class="visually-hidden"> Отель 4 звезды</h4>
+                <span class="star star-4">
+                  <span class="visually-hidden"> Отель 4 звезды</span>
+                </span>
                 <p class="product-card-number">Рейтинг: 8,5</p>
               </div>
             </li>
@@ -204,7 +208,9 @@
                 <a class="product-card-btn product-card-btn--accent product-card-btn--active btn" href="#">в избранном</a>
               </div>
               <div class="product-card-rating product-card-rating-four">
-                <h4 class="visually-hidden"> Отель 4 звезды</h4>
+                <span class="star star-4">
+                  <span class="visually-hidden"> Отель 4 звезды</span>
+                </span>
                 <p class="product-card-number">Рейтинг: 9,2</p>
               </div>
             </li>
@@ -224,7 +230,10 @@
                 <a class="product-card-btn product-card-btn--accent btn" href="#">в избранное</a>
               </div>
               <div class="product-card-rating product-card-rating-three">
-                <h4 class="visually-hidden"> Отель 3 звезды</h4>
+                <span class="star star-3">
+                  <spanv class="visually-hidden"> Отель 3 звезды
+                </span>
+                </span>
                 <p class="product-card-number">Рейтинг: 6,9</span>
               </div>
             </li>
@@ -244,7 +253,9 @@
                 <a class="product-card-btn product-card-btn--accent btn" href="#">в избранное</a>
               </div>
               <div class="product-card-rating product-card-rating-two">
-                <h4 class="visually-hidden"> Отель 2 звезды</h4>
+                <span class="star star-3">
+                  <span class="visually-hidden"> Отель 2 звезды</span>
+                </span>
                 <p class="product-card-number">Рейтинг: 5,0</p>
               </div>
             </li>
