--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <p class="info-text">
             Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!
           </p>
-          <ul class="info-list clear-ul">
+          <ul class="info-list">
             <li class="info-item info-item--accent">
               <div class="info-item-wrap">
                 <h3 class="info-item-title info-item-title--accent">Настоящий городок</h3>
@@ -99,7 +99,7 @@
           <p class="advantages-text">
             Опытный персонал и качественное обслуживание!
           </p>
-          <ul class="advantages-list clear-ul">
+          <ul class="advantages-list">
             <li class="advantages-item advantages-item--home">
               <h3 class="advantages-item-title">Жильё</h3>
               <p class="advantages-item-text">
