--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="icon" href="images/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
     <link href="styles/styles.css" rel="stylesheet">
   </head>
 
@@ -15,13 +17,13 @@
         </a>
         <nav class="navigation navigation-index">
           <ul class="navigation-list">
-            <li class="navigation--item">
+            <li class="navigation-item">
               <a class="navigation-link navigation-link-active" href="#">Главная</a>
             </li>
-            <li class="navigation--item">
+            <li class="navigation-item">
               <a class="navigation-link" href="#">О Cедоне</a>
             </li>
-            <li class="navigation--item">
+            <li class="navigation-item">
               <a class="navigation-link" href="catalog.html">Гостиницы</a>
             </li>
           </ul>
@@ -37,7 +39,7 @@
             <li class="navigation-user-item">
               <a class="navigation-user-link" href="#">
                 <span class="visually-hidden">Избранное</span>
-                <span class="navigation-user-link--favorites">12</span>
+                <span class="navigation-user-link-favorites">12</span>
                 <svg class="navigation-icon" aria-hidden="true" focusable="false" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M9.9 19C9.6 19 9.3 18.9 9.1 18.6C3.7 12.5 2.4 11.1 2.1 10.7C1.4 9.8 1 8.6 1 7.4C1 4.4 3.4 2 6.5 2C7.8 2 9 2.5 10 3.3C11 2.5 12.3 2 13.5 2C16.5 2 19 4.4 19 7.4C19 8.7 18.5 9.9 17.7 10.8L10.7 18.7C10.5 18.9 10.3 19 9.9 19ZM3.9 9.5C4.2 9.9 7.4 13.5 10 16.4L16.2 9.4C16.7 8.9 16.9 8.2 16.9 7.4C16.9 5.6 15.4 4.1 13.6 4.1C12.6 4.1 11.6 4.6 10.9 5.4C10.6 5.7 10.3 5.8 10 5.8C9.7 5.8 9.4 5.6 9.2 5.4C8.5 4.6 7.5 4.1 6.5 4.1C4.7 4.1 3.2 5.6 3.2 7.4C3.1 8.3 3.5 9 3.9 9.5C3.8 9.5 3.8 9.5 3.9 9.5Z" fill="black" />
                 </svg>
@@ -127,7 +129,7 @@
           </ul>
         </section>
         <section class="hotel-search" data-test="search">
-          <h2 class="hotel-search--title">Заинтересовались?</h2>
+          <h2 class="hotel-search-title">Заинтересовались?</h2>
           <p class="hotel-search-text">
             Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие
             предложения гостиниц в Седоне
@@ -135,8 +137,8 @@
           <a class="hotel-search-btn">ПОИСК ГОСТИНИЦЫ В седоне</a>
         </section>
         <section class="subscribe subscribe--img" data-test="subscribe">
-          <h2 class="subscribe--title">Подпишитесь на рассылку</h2>
-          <p class="subscribe--text">
+          <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+          <p class="subscribe-text">
             Только полезная информация и никакого спама, честное бойскаутское!
           </p>
           <form class="subscribe-form" action="http://echo.htmlacademy.ru/" method="post">
@@ -183,13 +185,65 @@
         <section class="site">
           <h2 class="visually-hidden">Логотип HTMLAcademy</h2>
           <a class="site-logo" href="https://htmlacademy.ru/">
-            <svg class="site-logo-img" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" aria-label="Логотип HTML-acdemy" width="115" height="34" class="img-logo-html">
+            <svg class="site-logo-img" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" aria-label="Логотип HTML-acdemy" width="115" height="34">
               <path d="M0 13.26v2.6h2.5v-2.6H0ZM11.6 4.86c-1.6 0-2.8.7-3.6 1.7h-.1V.36h-2v15.5h2v-5.3c0-2.1 1.3-3.6 3.3-3.6 1.8 0 2.9 1.4 2.9 3.2v5.7h2v-6.1c.1-3-1.8-4.9-4.5-4.9ZM26.6 5.16h-4.8v-3.7h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1v-5.7h4.8v-2ZM41.1 4.96c-1.6 0-2.9.8-3.5 2.1h-.1c-.6-1.2-1.8-2.1-3.4-2.1-1.4 0-2.5.8-3.1 1.8h-.1v-1.6H29v10.6h2v-5.4c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.5-1.4-4.3-3.9-4.3ZM47.8 13.06c0 1.7 1 2.7 2.8 2.7h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1V.36h-2v12.7ZM28.9 20.06c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6ZM44.2 22.36c-.5-2.4-2.6-4.1-5.4-4.1a5.4 5.4 0 0 0-5.6 5.6c0 3.1 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1a3.4 3.4 0 0 1-3.3 2.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6c1.6 0 2.8 1 3.3 2.2h2.1v-.2ZM55.1 20.06c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6ZM68.7 20.16c-.9-1.1-2.2-1.9-3.9-1.9-3.1 0-5.4 2.3-5.4 5.6s2.2 5.6 5.4 5.6c1.7 0 3-.8 3.8-1.8h.1v1.5h2v-15.4h-2v6.4Zm-3.6 7.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6ZM78.3 18.26c-3.3 0-5.5 2.5-5.5 5.6 0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-2.9h8.8c.2-3.6-2-6.3-5.5-6.3Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5c.3-1.5 1.5-2.6 3.2-2.6ZM98.2 18.26c-1.6 0-2.9.8-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4ZM109.4 27.36l-3.6-8.9h-2.2l4.8 11.6c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z" />
             </svg>
           </a>
         </section>
       </footer>
+    </div>
+    <div class="modal-container modal-container-close">
+      <div class="modal ">
 
+        <section class="modal-content">
+          <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
+          <button class="modal-close-button" aria-label="закрытие модального окна" type="button">
+            <span class="visually-hidden">Закрыть</span>
+          </button>
+          <form class="auth-form" action="https://echo.htmlacademy.ru/" method="post">
+            <p class="field-group">
+              <label class="field-group-text" for="calling">Дата Заезда:</label>
+              <input class="auth-form-field field" type="text" id="calling" name="auth-calling" value="27 апреля 2020" placeholder="Укажите дату">
+              <span class="input-text-prompting text-prompting-error">Мы не можем отправить вас в прошлое.</span>
+            </p>
+            <p class="field-group">
+              <label class="field-group-text text-date-departure" for="departure">Дата Выезда:</label>
+              <input class="auth-form-field field" type="text" id="departure" name="auth-departure" value="1 сентября 2023" placeholder="Укажите дату">
+              <span class="input-text-prompting">На эти даты есть свободные номера. Пока есть.</span>
+            </p>
+            <p class="field-group count-field-group">
+              <span class="short-group">
+                <label class="search-form-label" for="adults">
+                  <span>Взрослые:</span>
+                </label>
+                <button class="button-minus button-toggle" type="button">
+                  <span class="visually-hidden">Уменьшить число</span>
+                </button>
+                <input class="field count-input" id="adults" name="adults" type="number" placeholder="1" min="1" max="99" value="2" required>
+                <button class="button-plus button-toggle" type="button">
+                  <span class="visually-hidden">Увеличить число</span>
+                </button>
+              </span>
+              <span class="short-group">
+                <label class="search-form-label" for="children">
+                  <span>Дети:</span>
+                </label>
+                <button class="info-button" type="button">
+                  <span class="tooltip">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.</span>
+                </button>
+                <button class="button-minus button-toggle" type="button">
+                  <span class="visually-hidden">Уменьшить число</span>
+                </button>
+                <input class="field count-input" id="children" name="children" type="number" placeholder="0" min="0" max="99" value="2" required>
+                <button class="button-plus button-toggle" type="button">
+                  <span class="visually-hidden">Увеличить число</span>
+                </button>
+              </span>
+            </p>
+            <button class="button button-form-modal" type="submit" aria-label="поиск отелей по введёным данным">Найти</button>
+          </form>
+        </section>
+      </div>
     </div>
   </body>
 
